ingress/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  webdeploy
  namespace: default
  labels:
    app:  webdeploy
spec:
  selector:
    matchLabels:
      server: web
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        server: web
    spec:
#      initContainers:
#      - name: myinit
#        image: hello-world
      containers:
        - name: webserver
          image: httpd:2.4
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
#        - name: server
#          image: ubuntu
#          resources:
#            limits:
#              memory: "500Mi"
#              cpu: "500m"
#          command: ["/bin/bash", "-c"]
#          args:
#            - sleep 300
