ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
#  annotations: 
#you can put specific rules and access levels for nginx here
  labels:
    name: web-ingress
spec:
  rules:
  - host: mysite.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: websrvc
            port:
              number: 8080
#we added mysite.local to the hosts file, so that we can connect the ip with mysite.local
#since we have defined mysite.local, it is going to be shown on web, however
#nginx doesn't know it's IP, the default record is empty and will return 404 with the IP
